--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,11 @@
     <meta name="author" content="{{ site.author }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
+    <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Allister Antosik" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:type" content="blog" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="/icon.png" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:url" content="//allisterantosik.com" />
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/basscss.css" | prepend: site.baseurl }}" type="text/css">
     <link rel="stylesheet" href="{{ "/css/pixyll.css" | prepend: site.baseurl }}" type="text/css">
